cmake_minimum_required(VERSION 3.20)
project(lab2v3)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab2v3 main.cpp dynamic_array.h array_sequnce.h sequence.h errors.h tests_array_sequence.h tests_dynamic_array.h linked_list.h tests_linked_list.h list_sequence.h tests_list_sequence.h my_classes.h IndexOutOfRange.h array_set.h tests_array_set.h)
